--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,6 +15,8 @@
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="msapplication-TileColor" content="#8c3310">
   <meta name="theme-color" content="#8c3310">
+
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
   <app-root>
